feat: graphql implementation with login route migrated
    * chore: removed redundant json file
    * chore: removed legacy REST login endpoint
    * chore: split resolvers and added integration test for users resolver
    * chore: updated types
    * chore: updated test state
    * chore: refactored root component to work with new URQL login provider
    * feat: useLogin gql hook
    * chore: refactored <LoginForm /> to interact with React state instead of dispatching actions
    * chore: refactored <Header /> to call a prop function instead of dispatching a log out action
    * chore: refactored reducers and sagas and removed login state from redux
    * feat: client urql / codegen config
    * chore: split graphql schema files
    * feat: whoami query
    * feat: handle errors logging in
    * feat: DateTime scalar type and resolver
    * feat: graphql boilerplate with login mutation
